# hybrid_search

./: .gitignore  AGENTS.md  CROSS_DB_GRAPH_IMPLEMENTATION_PLAN.md  GIT_GUIDE.md  GRAPH_QUERY_COMPARISON_PLAN.md  README.md  SETUP_REMOTE.md  pyproject.toml  query_lancedb.py
benchmarks/: analyze_node_hop_distribution.py  benchmark_lancedb_vs_neo4j.py  benchmark_multi_hop_query.py  benchmark_query_performance.py  benchmark_scheme2_hop_analysis.py  benchmark_update_performance.py  benchmark_write_performance.py
docs/: ProjectStructure.md  base_py_analysis.md  graph_storage_optimization_analysis.md  kg_postgres_mongo_analysis.md  lancedb_graph_optimizer_implementation_plan.md  lancedb_graph_optimizer_plan.md  lancedb_index_benchmark.md  lancedb_optimization_plan.md  lightrag_py_analysis.md  operate_py_analysis.md
experiments/: CROSS_DB_GRAPH_BENCHMARK_GUIDE.md  LOCAL_ARANGODB_SETUP.md  LOCAL_POSTGRES_SETUP.md
lightrag_webui/: package.json
scripts/: clear_neo4j.sh  download_data.py  export_triples.py  import_lance.py  import_neo4j.py  run_lancedb_graph_phase3_benchmarks.sh
test_lance_api/: ROWADDR_NOTES.md  __init__.py  query_latency_utils.py  run_query_latency_demo.py  test_graph_khop_breakdown.py  test_graph_neighbor_breakdown.py  test_lance_load_efficiency.py  test_lancedb_vs_postgres_search.py  test_query_io_locality.py  test_query_io_locality_cold.py  test_query_latency_batch_patterns.py  test_query_latency_indexes.py  test_query_latency_locality.py  test_row_id.py  test_rowaddr.py  test_take_python_vs_rust_api.py
tests/: prebuild_graph_db.py  (+8 more)
(+94 files in other folders)
