[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hybrid-search"
version = "0.1.0"
description = "混合搜索测试项目 - LanceDB 和 Neo4j 性能对比"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "lancedb>=0.5.0",
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "tqdm>=4.60.0",
    "neo4j>=5.0.0",
    "datasets>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "python-arango>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "benchmarks",
    "experiments",
    "scripts",
    "test_lance_api",
    "query_lancedb.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "/benchmarks",
    "/experiments",
    "/scripts",
    "/test_lance_api",
    "/query_lancedb.py",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
